# libpg_query

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  EMSCRIPTEN.md  LICENSE  Makefile  Makefile.msvc  README.md  generator.rb  helper.js  libpgqueryparser.pc.in  output_node_json.c  output_node_json.h  output_node_json_conds.c  output_node_json_defs.c  pg_polyfills.c  pg_query.c  pg_query.h  pg_query.i  pg_query_fingerprint.c  pg_query_fingerprint_conds.c  pg_query_fingerprint_defs.c  pg_query_json.c  pg_query_json_defs.c  pg_query_json_generator.rb  pg_query_normalize.c  pg_query_parse.c
examples/: fingerprint.c  normalize.c  normalize_error.c  scan.c  simple.c  simple_error.c  simple_plpgsql.c
patches/: 00_disable_targets.patch  01_output_nodes_as_json.patch  01_parse_replacement_char.patch  01_parser_additional_param_ref_support.patch  02_lexer_track_yyllocend.patch  02_parser_support_question_mark_as_param_ref.patch  02_visibility_marks.patch  03_comment_scanner.patch  03_lexer_track_yyllocend.patch  03_makefiles.patch  04_lexer_comments_as_tokens.patch  04_mock.patch  05_gen_mriscript.patch  05_limit_option_enum_value_default.patch  06_alloc_set_delete_free_list.patch  06_make_memory_context_methods_const.patch  06_memory_context_delete_top_level.patch  06_pl_gram.patch  07_plpgsql_start_finish_datums.patch  07_thread_safety.patch  08_avoid_zero_length_delimiter_in_regression_tests.patch  09_allow_param_junk.patch  09_allow_trailing_junk.patch  09_backport_gram_ref_p_fix.patch  10_avoid_namespace_hashtab_impl_gen.patch  gen_node_support.patch  kwlist.patch  parsenodes.patch  parser_TBase.patch  partdefs.patch  pg_class.patch  primnodes.patch
protobuf/: parse_tree.pb-c.c  parse_tree.pb-c.h  parse_tree.proto  pg_query.pb-c.c  pg_query.pb-c.h  pg_query.proto  scan_output.pb-c.c  scan_output.pb-c.h  scan_output.proto
scripts/: extract_headers.rb  extract_source.rb  generate_fingerprint_outfuncs.rb  generate_fingerprint_tests.rb  generate_json_outfuncs.rb  generate_protobuf_and_funcs.rb  generate_protobuf_and_outfuncs.rb  generate_protobuf_outfuncs.rb  pg_config_overrides.h
src/: pg_parse.cpp  pg_query.c  pg_query_deparse.c  pg_query_enum_defs.c  pg_query_fingerprint.c  pg_query_fingerprint.h  pg_query_fingerprint_conds.c  pg_query_fingerprint_defs.c  pg_query_internal.h  pg_query_json.c  pg_query_json_conds.c  pg_query_json_defs.c  pg_query_json_helper.c  pg_query_json_plpgsql.c  pg_query_normalize.c  pg_query_outfuncs_conds.c  pg_query_outfuncs_defs.c  pg_query_outfuncs_json.c  pg_query_outfuncs_protobuf.c  pg_query_outfuncs_protobuf_cpp.cc  pg_query_parse.c  pg_query_parse_plpgsql.c  pg_query_protobuf.c  pg_query_protobuf.h  pg_query_protobuf_defs.c  pg_query_readfuncs_conds.c  pg_query_readfuncs_defs.c  pg_query_readfuncs_protobuf.c  pg_query_scan.c  pg_query_split.c  postgres_deparse.c
srcdata/: all_known_enums.json  enum_defs.json  nodetypes.json  (+2 more)
(+202 files in other folders)
